k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-portfolio-ingress
  namespace: ml-portfolio
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /bankchurn/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: bankchurn-service
            port:
              number: 80
      - path: /telecom/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: telecom-service
            port:
              number: 80
      - path: /carvision/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: carvision-service
            port:
              number: 80
